src/components/Definitions/Definitions.css
.meanings {
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
    scrollbar-width: thin;
    height: 55vh;
    border: 10px solid rgb(105, 105, 105);
    border-radius: 10px;
    padding: 10px 20px;
    overflow-x: hidden;
}

.subTitle {
    font-size: 5vw;
    font-family: 'Montserrat', sans-serif;
}

.singleMean {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    padding: 10px 20px;
    margin: 10px 0;
}

audio {
    width: auto;
    min-height: 6vh;
}

@media (max-width: 900px) {
    .meanings {
        height: 60vh;
        overflow-x: hidden;
        overflow-y: scroll;
    }
}

@media (max-width: 500px) {
    .meanings {
        margin-top: -5vh;
    }

    .subTitle {
        font-size: 8vw;
    }
}

::-webkit-scrollbar-track-piece{
	background-color:#fff;
	-webkit-border-radius:0;
    border-radius: 0;
}
::-webkit-scrollbar{
	width:8px;
	height:8px;
}
::-webkit-scrollbar-thumb{
	height:50px;
	background-color:#999;
	-webkit-border-radius:4px;
    border-radius: 4px;
	outline:2px solid #fff;
	outline-offset:-2px;
	border: 2px solid #fff;
}
::-webkit-scrollbar-thumb:hover{
	height:50px;
	background-color:#9f9f9f;
	-webkit-border-radius:4px;
    border-radius: 4px;
}

